# vibefactory

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  OLLAMA_SETUP.md  README.md  STRUCTURE.md  agents.py  app.py  comandos.md  config.py  documentation.md  flujo_desarrollo_producto_ia.md  gps_logic.py  init_prompt.md  markers.json  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  setup_vibe.py  setup_vibe_coding.py  setup_vibe_simple.py  streamlit_helpers.py  test_gps.py  utils.py
.github/workflows/: vibe.yml
.streamlit/: secrets.toml
.windsurf/: context_analysis.json  local_workflow_state.json  log_action.py  vibe_coding_config.yaml  workflow_state.json
.windsurf/brain/: plan.md
.windsurf/metrics/: runtime_metrics.json
.windsurf/rules/: documentation.rules.md  vibing.md
.windsurf/templates/: prompt_template.py
.windsurf/workflows/: 24-7.md  documentacion-247.md  vibe.md  workflow24.md
api/: __init__.py
components/: dashboard.py
examples/: README.md
examples/prompts/: README.md
game/: nombre_archivo.py' o '### nombre_archivo.md'..py
projects/: generated_projects.json
projects/sql/: Buenas prácticas  (+27 more)
scripts/: README.md  generate_docs.py  generate_tests.py  setup_environment.py  vibe_coder.py
services/: __init__.py
tests/: __init__.py  conftest.py  test_gps_logic.py  test_simple.py
una_fábrica_de_software_automatizada_con_ia/: Example_.py
utils/: __init__.py  api_clients.py  api_connector.py
vibefactory/: .env.example  README.md  __init__.py  agents.py  app.py  prompts.py  requirements.txt  utils.py
(+15 files in other folders)
